--- a/custom_bootstrap.css
+++ b/custom_bootstrap.css
@@ -2643,3 +2643,11 @@
 .bs4-border-0 {
   border: 0 !important;
 }
+
+.bs4-alert {
+  position: relative;
+  padding: 0.75rem 1.25rem;
+  margin-bottom: 1rem;
+  border: 1px solid transparent;
+  border-radius: 0.25rem;
+}
