--- a/custom_liferay_overwrite.css
+++ b/custom_liferay_overwrite.css
@@ -14,6 +14,7 @@ and Removes Side margins from Liferay Homepage */
 #wrapper {
   padding: 0;
   margin: inherit;
+  overflow-x: hidden;
 }
 
 /* Moves logo and site number to the right */
