Changed Link to Footer to QBiC Portal Live Link

--- a/custom_liferay_overwrite.css
+++ b/custom_liferay_overwrite.css
@@ -57,7 +57,7 @@ and Removes Side margins from Liferay Homepage */
   padding: 35px;
   background-size: 90%;
   background-repeat: no-repeat;
-  background-image: url("https://portal-testing.qbic.uni-tuebingen.de/documents/50393/52039/ncct-logo-all.png/3760437f-216f-4bfa-b2c5-e5d7ed911a66?t=1583160765889");
+  background-image: url("https://portal.qbic.uni-tuebingen.de/portal/documents/33387/39176/ncct-logo-all.png/d1f688a3-36af-4b25-9df2-61a107da6cae?t=1585838165571");
 }
 
 /* Removes margin from breadcrumbs to content */
